--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <script type="application/ld+json">
         {
             "@content": "http://schema.org",
-            "@type": "TravelAgency",
+            "@type": "Hotel",
             "name": "Villa Koukoudis",
             "description": "Holliday studios and appartments in Potos Thassos.",
             "url": "http://villakoukoudis.com",
@@ -57,7 +57,9 @@
                 "result": {
                     "@type": "Reservation",
                     "name": "Book a Room"
-                }
+                },
+                "petsAllowed": "True",
+                "smokingAllowed": "True",
                 "email": "info@villakoukoudis.com",
                 "image": "http://villakoukoudis/img/sobalogo.png"
             }
@@ -242,9 +244,9 @@
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fillRequirementsModal">
                             Request a quote
                         </button>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fillRequirementsModal">
+                        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fillRequirementsModal">
                             Gallery
-                        </button>
+                        </button> -->
                         <!-- <a href="#" class="btn btn-outline-secondary ">Fill out your requirements form</a> -->
                     </div>
                 </div>
