--- a/src/index.html
+++ b/src/index.html
@@ -144,17 +144,19 @@
     <header id="villakoukoudis-potos-thassos-home-section" class="parallax-window " style="margin-top: 60px" data-parallax="scroll"
         data-image-src="img/soba1300.png">
         <div class="container home-section-padding">
+            <h1>
+                Villa Koukoudis holiday studios, rooms and appartments in Potos Thassos
+            </h1>
+
             <div class="row">
                 <div class="col-lg-6 col-md-6">
-                    <h1>
-                        Villa Koukoudis in Potos Thassos
-                    </h1>
                     <div id="meetisland1" class="d-flex flex-row">
                         <div class="p-2 align-self-start">
                             <i class="fa fa-check"></i>
                         </div>
                         <div class="p-2  align-self-end">
                             <strong>Accommodation</strong> based on your requirements
+                            
                         </div>
                     </div>
                     <div id="meetisland2" class="d-flex flex-row">
